<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Task Manager</string>
    <string name="add_task">Add Task</string>
    <string name="plus_sign">  +  </string>
    <string name="cancel">Cancel</string>
    <string name="tasks">Tasks</string>
    <string name="unsaved_changes_title">Unsaved Changes</string>
    <string name="unsaved_changes_message">Would you like to add this task?</string>
    <string name="discard">Discard</string>
    <string name="no_tasks">No Tasks</string>
    <string name="remove_complete">- Completed Tasks</string>
    <string name="description">Description</string>
    <string name="add_location_to_task">Add Location To Task</string>
    <string name="use_this_location">Use this location</string>
    <string name="map_this_address">Map this address</string>
    <string name="edit_location">Edit Location</string>
    <string name="show_local">Show local tasks only</string>

</resources>
