<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <TextView
        android:id="@+id/tasks_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_task" />

    <EditText
        android:id="@+id/task_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:id="@+id/tasks_desc_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/description" />

    <EditText
        android:id="@+id/task_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />
    
    <TextView
        android:id="@+id/address_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <Button
        android:id="@+id/add_location_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_location_to_task"
        android:onClick="addLocationButtonClicked" />
    
    <Button
        android:id="@+id/edit_location_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_location"
        android:onClick="editLocationButtonClicked"
        android:visibility="gone" />
    
    <Button
        android:id="@+id/add_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_task" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel" />

</LinearLayout>